<resources>
    <string name="app_name">Sky Observer</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="month">Month:</string>

    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
...
