...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintStart_toEndOf="@id/tv_trip_length"
        app:layout_constraintTop_toTopOf="@id/tv_trip_length" />

    <ExpandableListView
        android:id="@+id/lst_best_dates"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/grid_view_price_vertical_spacing"
        android:divider="@android:color/white"
        android:dividerHeight="@dimen/grid_view_price_vertical_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
...
